# xo-simple-android-with-ndk

./: README.md
app/: build.gradle
app/src/androidTest/java/com/after/thursday/xo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  xo.cpp
app/src/main/java/com/after/thursday/xo/: MainActivity.kt  XOFragment.kt  XOLibraryWrapper.java  XOListener.java  XOViewModel.kt
app/src/main/res/layout/: xo_fragment_layout.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/after/thursday/xo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
